<resources>
    <string name="app_name">Radar Bluetooth</string>
    <string name="action_settings">Settings</string>
    <string name="button_edit_room">Room</string>
    <string name="button_create">Create</string>
    <string name="button_view">View</string>
    <string name="button_draw_path">DRAW PATH</string>
    <string name="button_edit_path">Path</string>
    <string name="text_view_list_choose_room_header">Choose one from below</string>
    <string name="progress_scanning">Scanning...</string>
    <string name="next_edge">Next edge</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="radar">RADAR</string>
    <string name="map">MAP</string>
    <string name="search_devices">SEARCH FOR DEVICES</string>
    <string name="measurement">MEASUREMENT</string>
    <string name="results">RESULTS</string>
    <string name="title_activity_bluetooth_results_editor">BluetoothResultsEditor</string>
    <string name="no_bluetooth">This device does not have a bluetooth adapter</string>
    <string name="enabling_bluetooth">Bluetooth is enabled now</string>
    <string name="enabled_bluetooth">Bluetooth is already enabled</string>
    <string name="not_allow_bluetooth">The user decided to deny bluetooth access</string>
    <string name="wrong_input">You typed wrong input or name already exists</string>
    <string name="added_room">Room is just added</string>
    <string name="deleted_room">Room is just deleted</string>
    <string name="deleted_result">Result is just deleted</string>
    <string name="deleted_measurement">Measurement is just deleted</string>
    <string name="show">Show</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name">NAME</string>
    <string name="walkRatio">TYPE</string>
    <string name="mapping">MAPPING</string>
    <string name="tracking">TRACKING</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="settings">SETTINGS</string>
    <string name="start_process">START PROCESS</string>
    <string name="room">ROOM</string>
    <string name="path">PATH</string>
    <string name="add">ADD</string>
    <string name="edit_big">EDIT</string>
    <string name="pick_corners">PICK CORNERS BELOW</string>
    <string name="title_activity_mapping_menu">MappingMenu</string>
    <string name="title_activity_settings">Settings</string>


    <string name="meter_per_second">M/S</string>
    <string name="kilometer_per_second">KM/H</string>
    <string name="average_speed">Average speed</string>
    <string name="is">is in</string>
    <string name="from_here">m range</string>
    <string name="name_small">Name</string>
    <string name="address">Address</string>
    <string name="rssi">Rssi</string>
    <string name="time">Time</string>
    <string name="edge">Edge</string>
    <string name="room_small">Room</string>
    <string name="number">Number</string>
    <string name="hold_to_open_menu">Hold to open menu</string>
    <string name="date">Date</string>
    <string name="your_speed">Your speed is </string>
    <string name="view_big">VIEW</string>
    <string name="info">Info</string>
    <string name="found_devices">Devices in 10 meters range</string>
    <string name="map_devices">Devices on map</string>
    <string name="new_room">NEW</string>
    <string name="existing_room">EXISTING</string>
    <string name="room_process_option">ROOM</string>
    <string name="error">Error</string>
    <string name="error_path">You can\'t changing length of edges in this way, try again</string>
    <string name="error_map">You have encountered an error, calculation failed</string>
    <string name="user_speed">User speed</string>
    <string name="room_amount">Number of rooms</string>
    <string name="path_amount">Number of edges</string>
    <string name="measurements_amount">Number of mappings</string>
    <string name="results_amount">Number of results</string>
    <string name="set">Set</string>
    <string name="radar_small">Radar</string>
    <string name="measurement_small">Measurement</string>
    <string name="path_small">Path</string>
    <string name="results_small">Results</string>
    <string name="search_devices_small">Search for devices</string>
    <string name="mapping_small">Mapping</string>
    <string name="error_not_enough">There are no enough data to locate device </string>
    <string name="error_not_enough_2">it\'s need to be more than 2 results in the measurement </string>
    <string name="gps_input">If you don\'t want or can\'t to get speed trough GPS, you can set it by hand in m/s unit.</string>
    <string name="cancel">Cancel</string>
    <string name="tracking_input">Enter name or address of device, you can also enter both.</string>
    <string name="added_edges">Edges are just added</string>
    <string name="deleted_edge">Edges are just deleted</string>
    <string name="updated_edges">Updated edges data</string>
    <string name="measurement_added">Measurement is just added</string>
    <string name="found_device">Device found</string>
    <string name="speed_needed">First you must set speed value for using this option</string>
    <string name="empty_measurement">There is no data in this measurement</string>
    <string name="bluetooth_required">You need to turn on bluetooth first</string>
    <string name="measure">Measure</string>
</resources>
