<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_measurement_editor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    android:stretchColumns="*"
    tools:context="com.example.kamil.br.activities.mapping.results.BluetoothResultsEditor">

    <TableRow>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_view_list_choose_room_header"
            android:id="@+id/textViewListMeasurementEditorHeader"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="center_horizontal"
            android:layout_span="6"
            />
    </TableRow>

    <TableRow
        android:background="@color/colorPrimaryDark">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textMeasurementEditorNumber"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edge"
            android:id="@+id/textMeasurementEditorEdge"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_small"
            android:id="@+id/textMeasurementEditorName"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/rssi"
            android:id="@+id/textMeasurementEditorRssi"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:id="@+id/textMeasurementEditorTime"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/room_small"
            android:id="@+id/textMeasurementChooseRoomName"
            />
    </TableRow>

    <TableRow>

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/listViewMeasurementEditor"
            android:layout_span="6"
            />
    </TableRow>

</TableLayout>
