<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context=".activities.main.MappingMenu"
    >

    <TableRow
        android:background="@color/colorPrimaryDark"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_process"
            android:id="@+id/textView_start_process"
            android:layout_span="2"
            android:layout_gravity="center"
            />
    </TableRow>

    <TableRow
        android:padding="5dp"
        android:layout_weight="1"
        >

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:src = "@drawable/start_process_icon"
            android:background="@null"
            android:id="@+id/button_start_process"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            android:layout_span="2"
            />

    </TableRow>

    <TableRow
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/room"
            android:id="@+id/textView_room"
            android:layout_gravity="center"
            android:layout_column="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/results"
            android:id="@+id/textView_measurement"
            android:layout_gravity="center"
            android:layout_column="1"/>
    </TableRow>

    <TableRow
        android:paddingBottom="5dp"
        android:layout_weight="1"
        >

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_devices"
            android:id="@+id/button_room"
            android:src = "@drawable/room_icon"
            android:background="@null"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radar"
            android:id="@+id/button_measurement"
            android:src = "@drawable/measurement_icon"
            android:background="@null"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

    </TableRow>

    <TableRow
        android:background="@color/colorPrimaryDark">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/path"
            android:id="@+id/textView_path"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map"
            android:id="@+id/textView_map"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:paddingBottom="5dp"
        android:layout_weight="1"
        >

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_devices"
            android:id="@+id/button_path"
            android:src = "@drawable/path_icon"
            android:background="@null"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"
            />

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radar"
            android:id="@+id/button_map"
            android:src = "@drawable/map_icon"
            android:background="@null"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

    </TableRow>

</TableLayout>