<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context=".activities.RoomMenu"
    >



<TableRow
    android:background="@color/colorPrimaryDark">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/textView_create"
        android:layout_gravity="center"
        android:layout_column="0"/>

</TableRow>

<TableRow
    android:paddingBottom="5dp"
    android:layout_weight="1"
    >

    <ImageButton
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_devices"
        android:id="@+id/buttonCreate"
        android:src = "@drawable/add_icon"
        android:background="@null"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        />



</TableRow>

    <TableRow
        android:background="@color/colorPrimaryDark">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_big"
            android:id="@+id/textView_edit"
            android:layout_gravity="center"
            />
    </TableRow>

    <TableRow
        android:paddingBottom="5dp"
        android:layout_weight="1"
        >

        <ImageButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/radar"
            android:id="@+id/buttonEdit"
            android:src = "@drawable/edit_icon"
            android:background="@null"
            android:layout_gravity="center"
            android:scaleType="fitCenter"
            android:adjustViewBounds="true"/>

    </TableRow>
</TableLayout>