<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="*"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    tools:context="com.example.kamil.br.activities.main.Settings">

    <TableRow
        android:layout_weight="1">
        <TextView
            android:text="@string/user_speed"
            android:textSize="@dimen/medium_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSettingsGPS"
            android:layout_gravity="left|center"
            android:layout_column="0"/>
        <TextView
            android:text="0"
            android:textSize="@dimen/medium_font"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSettingsGPSValue"
            android:layout_gravity="center"
            android:layout_column="1"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/set"
            android:background="@color/colorPrimaryDark"
            android:id="@+id/buttonSettingsGps"
            android:layout_gravity="center"
            android:layout_column="2"/>
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <TextView
            android:text="@string/room_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="left|center"
            android:id="@+id/textViewSettingsRoom" />
        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:id="@+id/textViewSettingsRoomAmount"
            android:layout_gravity="center" />
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <TextView
            android:text="@string/path_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="left|center"
            android:id="@+id/textViewSettingsEdges" />

        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="center"
            android:id="@+id/textViewSettingsEdgesAmount" />
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <TextView
            android:text="@string/measurements_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="left|center"
            android:id="@+id/textViewSettingsMeasurements" />

        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="center"
            android:id="@+id/textViewSettingsMeasurementsAmount" />
    </TableRow>

    <TableRow
        android:layout_weight="1">
        <TextView
            android:text="@string/results_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="left|center"
            android:id="@+id/textViewSettingsResults" />

        <TextView
            android:text="0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/medium_font"
            android:layout_gravity="center"
            android:id="@+id/textViewSettingsResultsAmount"
          />
    </TableRow>

</TableLayout>
